--- a/Assets/index.html
+++ b/Assets/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- nav starts -->
     <!-- <div class="container text-white"> -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand text-white" href="#">Sosuke Brause</a>
 
       <button
@@ -76,91 +76,68 @@
     </div>
     <!-- JUMBO ends -->
 
-    <!-- carousel begins -->
-    <div
-      id="carouselExampleCaptions"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <ol class="carousel-indicators">
-        <li
-          data-target="#carouselExampleCaptions"
-          data-slide-to="0"
-          class="active"
-        ></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="./img/jquery-banner.png"
-            class="d-block w-100"
-            alt="jquery-banner"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Jivin' with JQuery</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="./img/react-pinterest.png"
-            class="d-block w-100"
-            alt="react-logo"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>The latest and greatest</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="./img/npm-NodeJs.jpg"
-            class="d-block w-100"
-            alt="npm-node"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Dive into the myriad of nifty packages</h5>
-            <p>
-              Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-            </p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="./img/MongoDBAtlas.png"
-            class="d-block w-100"
-            alt="mongo-db"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>State of the art cloud database service</h5>
-            <p>
-              Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-            </p>
+    <!-- img figs begins -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <figure class="figure">
+              <img
+                src="./img/jq.png"
+                class="figure-img img-fluid"
+                alt="jquery-logo"
+              />
+              <figcaption class="figure-caption">
+                Beginning with JQuery Jubilee
+              </figcaption>
+            </figure>
+
+            <figure class="figure">
+              <img
+                src="./img/np.png"
+                class="figure-img img-fluid"
+                alt="npm-logo"
+              />
+              <figcaption class="figure-caption">
+                Navigating the Node nebula
+              </figcaption>
+            </figure>
+            <figure class="figure">
+              <img
+                src="./img/api.png"
+                class="figure-img img-fluid"
+                alt="api-img"
+              />
+              <figcaption class="figure-caption">
+                Reliable, real-world apps using REST API's
+              </figcaption>
+            </figure>
+
+            <figure class="figure">
+              <img
+                src="./img/react.png"
+                class="figure-img img-fluid"
+                alt="react-logo"
+              />
+              <figcaption class="figure-caption">
+                React: a relationship of reluctance & reconciliation
+              </figcaption>
+            </figure>
+            <figure class="figure">
+              <img
+                src="./img/mongodb-icon-62.png"
+                class="figure-img img-fluid"
+                alt="mongodb-logo"
+              />
+              <figcaption class="figure-caption">
+                A caption for the above image.
+              </figcaption>
+            </figure>
           </div>
         </div>
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleCaptions"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleCaptions"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
-    <!-- carousel ends -->
+    <!-- img figs ends -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
