--- a/Assets/contact.html
+++ b/Assets/contact.html
@@ -43,70 +43,65 @@
             >Home <span class="sr-only">(current)</span></a
           >
           <a class="nav-link" href="./portfolio.html">Portfolio</a>
-          <a
-            class="nav-link disabled"
-            href="#"
-            tabindex="-1"
-            aria-disabled="true"
-            >Disabled</a
-          >
         </div>
       </div>
     </nav>
     <!-- </div> -->
     <!-- Nav ends -->
-
-    <div class="row contact">
-      <div class="col-8 mb-4 mt-4">
-        <div class="card text-center" id="con-card">
-          <img
-            src="./img/coding.png"
-            class="rounded mx-auto d-block"
-            id="con-icon"
-            max-alt="img"
-          />
-          <h2 class="card-title mt-3">&lt;contact/&gt;</h2>
-          <div class="card-body">
-            <form>
-              <div class="container">
-                <div class="row contact-in">
-                  <div class="col-6">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Name"
-                    />
-                  </div>
-                  <div class="col-6">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Email"
-                    />
+    <div class="page">
+      <div class="row contact">
+        <div class="col-8">
+          <div class="card text-center" id="con-card">
+            <img
+              src="./img/coding.png"
+              class="rounded mx-auto d-block"
+              id="con-icon"
+              max-alt="img"
+            />
+            <h2 class="card-title mt-3">&lt;contact/&gt;</h2>
+            <div class="card-body">
+              <form>
+                <div class="container">
+                  <div class="row contact-in">
+                    <div class="col-6">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Name"
+                      />
+                    </div>
+                    <div class="col-6">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Email"
+                      />
+                    </div>
                   </div>
                 </div>
-              </div>
-            </form>
+              </form>
 
-            <div class="input-group">
-              <!-- <div class="input-group-prepend">
-                <span class="input-group-text">Message</span>
-              </div> -->
-              <textarea
-                class="form-control"
-                aria-label="With textarea"
-                rows="10"
-              ></textarea>
+              <div class="input-group">
+                <textarea
+                  class="form-control"
+                  aria-label="With textarea"
+                  rows="10"
+                ></textarea>
+              </div>
+              <button
+                type="button"
+                class="btn btn-primary btn-lg mt-4"
+                id="send"
+              >
+                Send
+              </button>
             </div>
-            <button type="button" class="btn btn-primary btn-lg" id="send">
-              Send
-            </button>
           </div>
         </div>
       </div>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 2 months ago</small>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 2 months ago</small>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
